submodule; generator/translator

--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -3,3 +3,4 @@ include_directories(.)
 # add_subdirectory(universe)
 add_subdirectory(tokenizer)
 add_subdirectory(parser)
+add_subdirectory(generator)
