--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_executable(tests test_tokenizer.cpp test_parser.cpp)
-add_dependencies(tests gtest_main tokenizer parser)
-target_link_libraries(tests gtest gtest_main tokenizer parser)
+add_executable(tests test_tokenizer.cpp test_parser.cpp test_translator.cpp)
+add_dependencies(tests gtest gtest_main tokenizer parser generator)
+target_link_libraries(tests gtest gtest_main tokenizer parser generator)
