basic json parsing

--- a/tests/blackbox/output/CMakeLists.txt
+++ b/tests/blackbox/output/CMakeLists.txt
@@ -1,1 +1,1 @@
-add_library(holgen_blackbox_test_lib Race.cpp Person.cpp Damage.cpp Weapon.cpp)
+add_library(holgen_blackbox_test_lib Race.cpp Person.cpp Damage.cpp Weapon.cpp JsonHelper.cpp)
