json parsing with converters

--- a/tests/blackbox/output/CMakeLists.txt
+++ b/tests/blackbox/output/CMakeLists.txt
@@ -1,1 +1,1 @@
-add_library(holgen_blackbox_test_lib Race.cpp Person.cpp DamageMultiplier.cpp Weapon.cpp JsonHelper.cpp)
+add_library(holgen_blackbox_test_lib Race.cpp Person.cpp RaceId.cpp Country.cpp DamageMultiplier.cpp Weapon.cpp JsonHelper.cpp Converter.cpp)
