--- a/tests/blackbox/CMakeLists.txt
+++ b/tests/blackbox/CMakeLists.txt
@@ -7,6 +7,9 @@ add_subdirectory(x_googletest)
 include_directories(x_googletest/googletest/include)
 add_subdirectory(x_rapidjson)
 include_directories(x_rapidjson/include)
+add_subdirectory(x_lua)
+include_directories(x_lua/src)
+
 add_subdirectory(output)
 include_directories(output)
 add_subdirectory(tests)
