--- a/apps/cli/CMakeLists.txt
+++ b/apps/cli/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_executable(cli main.cpp)
-add_dependencies(cli tokenizer parser generator)
-target_link_libraries(cli tokenizer parser generator)
+add_dependencies(cli tokenizer parser generator core)
+target_link_libraries(cli tokenizer parser generator core)
