--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -1,5 +1,5 @@
 include_directories(.)
-# add_subdirectory(core)
+add_subdirectory(core)
 add_subdirectory(tokenizer)
 add_subdirectory(parser)
 add_subdirectory(generator)
