validator class and tests

--- a/apps/cli/CMakeLists.txt
+++ b/apps/cli/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_executable(cli main.cpp)
-add_dependencies(cli tokenizer parser generator core)
-target_link_libraries(cli tokenizer parser generator core)
+add_dependencies(cli generator parser tokenizer core)
+target_link_libraries(cli generator parser tokenizer core)
