--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,3 +1,5 @@
-add_executable(holgen_tests test_tokenizer.cpp test_parser.cpp test_translator.cpp test_generator.cpp test_validator.cpp test_dependency_graph.cpp test_generator_global_pointer.cpp Helpers.cpp)
+set(sources test_tokenizer.cpp test_parser.cpp test_translator.cpp test_generator.cpp test_validator.cpp test_dependency_graph.cpp test_generator_global_pointer.cpp Helpers.cpp)
+set(translator_plugin_sources translator_plugins/ClassPluginTest.cpp translator_plugins/ClassFieldPluginTest.cpp)
+add_executable(holgen_tests ${sources} ${translator_plugin_sources})
 add_dependencies(holgen_tests gtest gtest_main generator parser tokenizer core)
 target_link_libraries(holgen_tests gtest gtest_main generator parser tokenizer core)
