plugin tests: ClassFieldSetterPluginTest

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,5 +1,5 @@
 set(sources test_tokenizer.cpp test_parser.cpp test_translator.cpp test_generator.cpp test_validator.cpp test_dependency_graph.cpp test_generator_global_pointer.cpp Helpers.cpp)
-set(translator_plugin_sources plugins/ClassPluginTest.cpp plugins/ClassFieldPluginTest.cpp plugins/ClassFieldGetterPluginTest.cpp)
+set(translator_plugin_sources plugins/ClassPluginTest.cpp plugins/ClassFieldPluginTest.cpp plugins/ClassFieldGetterPluginTest.cpp plugins/ClassFieldSetterPluginTest.cpp)
 add_executable(holgen_tests ${sources} ${translator_plugin_sources})
 add_dependencies(holgen_tests gtest gtest_main generator parser tokenizer core)
 target_link_libraries(holgen_tests gtest gtest_main generator parser tokenizer core)
