--- a/tests/blackbox/CMakeLists.txt
+++ b/tests/blackbox/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_CXX_STANDARD 20)
 
 add_subdirectory(x_googletest)
 include_directories(x_googletest/googletest/include)
+include_directories(x_googletest/googlemock/include)
 add_subdirectory(x_rapidjson)
 include_directories(x_rapidjson/include)
 add_subdirectory(x_lua)
