refacto: renamed Naming to NamingConvention, made it easily extendible

--- a/libs/generator/CMakeLists.txt
+++ b/libs/generator/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(gen_base CodeGenerator.cpp Translator.cpp HeaderContainer.cpp CodeBlock.cpp TypeInfo.cpp TranslatedProject.cpp Naming.cpp)
+set(gen_base CodeGenerator.cpp Translator.cpp HeaderContainer.cpp CodeBlock.cpp TypeInfo.cpp TranslatedProject.cpp NamingConvention.cpp)
 set(gen_json_plugins plugins/json/JsonPlugin.cpp plugins/json/JsonParseFilesPlugin.cpp plugins/json/JsonHelperPlugin.cpp plugins/json/JsonConverterPlugin.cpp)
 set(gen_lua_plugins plugins/lua/LuaPlugin.cpp plugins/lua/LuaHelperPlugin.cpp plugins/lua/LuaFunctionPlugin.cpp)
 set(gen_plugins plugins/TranslatorPlugin.cpp plugins/helpers/GlobalPointerPlugin.cpp plugins/helpers/FilesystemHelperPlugin.cpp plugins/ClassFieldPlugin.cpp plugins/ClassFieldGetterPlugin.cpp plugins/ClassFieldSetterPlugin.cpp plugins/ContainerFieldPlugin.cpp plugins/ClassPlugin.cpp plugins/ManagedClassPlugin.cpp plugins/EnumPlugin.cpp plugins/CppFunctionPlugin.cpp)
