--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,11 +3,9 @@ project(holgen)
 
 set(CMAKE_CXX_STANDARD 20)
 
-# TODO: probably not xplatform
-add_compile_options(-Wall -Wextra -Wpedantic -Werror)
-
-
 add_subdirectory(external)
+# TODO: probably not xplatform
+add_compile_options(-Wall -Wextra -Wpedantic -Werror -Wduplicated-branches -Wduplicated-cond)
 add_subdirectory(libs)
 include_directories(libs)
 add_subdirectory(apps)
