--- a/tests/blackbox/output/CMakeLists.txt
+++ b/tests/blackbox/output/CMakeLists.txt
@@ -5,5 +5,5 @@ set(custom_sources)
 # HOLGEN_USER_DEFINED_BEGIN:CustomSources
 # HOLGEN_USER_DEFINED_END:CustomSources
 add_library(holgen_blackbox_test_lib ${gen_sources} ${src_sources} ${custom_sources})
-# HOLGEN_USER_DEFINED_BEGIN:Dependencies
-# HOLGEN_USER_DEFINED_END:Dependencies
+# HOLGEN_USER_DEFINED_BEGIN:CustomDependencies
+# HOLGEN_USER_DEFINED_END:CustomDependencies
