enabled most warnings in generated code

--- a/tests/blackbox/output/CMakeLists.txt
+++ b/tests/blackbox/output/CMakeLists.txt
@@ -7,3 +7,6 @@ set(custom_sources)
 add_library(holgen_blackbox_test_lib STATIC ${gen_sources} ${src_sources} ${custom_sources})
 # HOLGEN_USER_DEFINED_BEGIN:CustomDependencies
 # HOLGEN_USER_DEFINED_END:CustomDependencies
+if (UNIX)
+  target_compile_options(holgen_blackbox_test_lib PRIVATE -Wall -Wextra -Wpedantic -Werror -Wno-unused-parameter -Wno-unused-variable)
+endif ()
