--- a/libs/parser/CMakeLists.txt
+++ b/libs/parser/CMakeLists.txt
@@ -1,1 +1,7 @@
-add_library(parser Parser.cpp ProjectDefinition.cpp ProjectDefinition.h DependencyGraph.cpp DependencyGraph.h)
+add_library(parser
+    Parser.cpp
+    ProjectDefinition.cpp
+    ProjectDefinition.h
+    DependencyGraph.cpp
+    DependencyGraph.h
+)
