lua custom data pt1: LuaRegistryData type

--- a/libs/generator/CMakeLists.txt
+++ b/libs/generator/CMakeLists.txt
@@ -26,6 +26,7 @@ set(gen_json_plugins
 
 set(gen_lua_plugins
     plugins/lua/LuaPlugin.cpp
+    plugins/lua/LuaFieldsPlugin.cpp
     plugins/lua/LuaHelperPlugin.cpp
     plugins/lua/LuaFunctionPlugin.cpp
 )
