added CLASS_NAME constexpr to all classes and enums

--- a/libs/generator/CMakeLists.txt
+++ b/libs/generator/CMakeLists.txt
@@ -51,6 +51,7 @@ set(gen_plugins
     plugins/ClassFieldVariantPlugin.cpp
     plugins/FunctionPluginBase.cpp
     plugins/ClassCopyMoveDestroyPlugin.cpp
+    plugins/ClassMetadataPlugin.cpp
 )
 
 add_library(generator
