csharp support pt4: temporary DotNetHost util class to load dotnet modules

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,9 @@ tests/blackbox/.run/
 tests/blackbox/.idea/
 tests/blackbox_csharp/.idea/
 tests/blackbox_csharp/output/
+tests/blackbox_csharp/csharp/TestModule/obj
+tests/blackbox_csharp/csharp/TestModule/bin
+tests/blackbox_csharp/csharp/TestModule2/obj
+tests/blackbox_csharp/csharp/TestModule2/bin
+tests/blackbox_csharp/csharp/.idea
+tests/blackbox_csharp/bin
