--- a/tests/blackbox_csharp/output/CMakeLists.txt
+++ b/tests/blackbox_csharp/output/CMakeLists.txt
@@ -5,6 +5,7 @@ set(gen_sources
     gen/Vector.cpp
     gen/GlobalPointer.cpp
     gen/FilesystemHelper.cpp
+    gen/Singleton.cpp
 )
 set(src_sources
     src/CalculatorManager.cpp
