CodeGenerator refacto pt2: extracted holgen header generation

--- a/libs/generator/CMakeLists.txt
+++ b/libs/generator/CMakeLists.txt
@@ -59,6 +59,7 @@ set(gen_plugins
 set(gen_generators
     generators/Generator.cpp
     generators/CMakeGenerator.cpp
+    generators/HolgenHeaderGenerator.cpp
 )
 
 add_library(generator
