CodeGenerator refacto pt5: extracted cpp source generation

--- a/libs/generator/CMakeLists.txt
+++ b/libs/generator/CMakeLists.txt
@@ -62,6 +62,7 @@ set(gen_generators
     generators/HolgenHeaderGenerator.cpp
     generators/CppModifiableSourceGenerator.cpp
     generators/CppHeaderGenerator.cpp
+    generators/CppSourceGenerator.cpp
 )
 
 add_library(generator
