csharp support pt7: generating csharp project file

--- a/libs/generator/CMakeLists.txt
+++ b/libs/generator/CMakeLists.txt
@@ -63,6 +63,8 @@ set(gen_generators
     generators/CppModifiableSourceGenerator.cpp
     generators/CppHeaderGenerator.cpp
     generators/CppSourceGenerator.cpp
+    generators/CSharpWrapperGenerator.cpp
+    generators/CSharpProjectGenerator.cpp
 )
 
 add_library(generator
