csharp support pt10: DotNetHost class that managed module loading (not tested on windows)

--- a/libs/generator/CMakeLists.txt
+++ b/libs/generator/CMakeLists.txt
@@ -37,6 +37,7 @@ set(gen_lua_plugins
 set(gen_csharp_plugins
     plugins/csharp/DotNetModulePlugin.cpp
     plugins/csharp/DotNetModuleFunctionsPlugin.cpp
+    plugins/csharp/DotNetHostPlugin.cpp
 )
 
 set(gen_plugins
@@ -70,6 +71,7 @@ set(gen_generators
     generators/CppSourceGenerator.cpp
     generators/CSharpWrapperGenerator.cpp
     generators/CSharpProjectGenerator.cpp
+    generators/CSharpHolgenMainGenerator.cpp
 )
 
 add_library(generator
