csharp support pt18: module interfaces

--- a/libs/generator/CMakeLists.txt
+++ b/libs/generator/CMakeLists.txt
@@ -72,6 +72,8 @@ set(gen_generators
     generators/CSharpWrapperGenerator.cpp
     generators/CSharpProjectGenerator.cpp
     generators/CSharpHolgenMainGenerator.cpp
+    generators/CSharpModuleInterfaceGenerator.cpp
+    generators/CSharpGeneratorBase.cpp
 )
 
 set(gen_lang
