csharpsupport pt20: added tests

--- a/tests/blackbox_csharp/csharp/TestModule/TestModule.csproj
+++ b/tests/blackbox_csharp/csharp/TestModule/TestModule.csproj
@@ -1,11 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <LangVersion>13</LangVersion>
-        <OutputType>Exe</OutputType>
     </PropertyGroup>
-
+    <ItemGroup>
+      <ProjectReference Include="..\CSharpBindings\CSharpBindings.csproj" />
+    </ItemGroup>
 </Project>
