--- a/tests/blackbox_csharp/csharp/TestModule2/TestModule2.csproj
+++ b/tests/blackbox_csharp/csharp/TestModule2/TestModule2.csproj
@@ -4,7 +4,11 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <OutputType>Exe</OutputType>
+        <LangVersion>13</LangVersion>
     </PropertyGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\CSharpBindings\CSharpBindings.csproj" />
+    </ItemGroup>
 
 </Project>
