--- a/tests/blackbox_csharp/CMakeLists.txt
+++ b/tests/blackbox_csharp/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.20)
-project(holgen_blackbox_swig)
+project(holgen_blackbox_csharp)
 
 set(CMAKE_CXX_STANDARD 20)
 
@@ -7,6 +7,7 @@ add_subdirectory(x_googletest)
 include_directories(x_googletest/googletest/include)
 include_directories(x_googletest/googlemock/include)
 
+include_directories(tests)
 add_subdirectory(output)
 include_directories(output/gen)
 
