more native support for csharp classes

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ tests/blackbox/.run/
 tests/blackbox/.idea/
 tests/blackbox_csharp/.idea/
 tests/blackbox_csharp/output/
+tests/blackbox_csharp/csharp/CSharpBindings/bin
+tests/blackbox_csharp/csharp/CSharpBindings/obj
 tests/blackbox_csharp/csharp/TestModule/obj
 tests/blackbox_csharp/csharp/TestModule/bin
 tests/blackbox_csharp/csharp/TestModule2/obj
