support for returning vector/span/array to csharp

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ tests/blackbox_csharp/csharp/TestModule2/obj
 tests/blackbox_csharp/csharp/TestModule2/bin
 tests/blackbox_csharp/csharp/.idea
 tests/blackbox_csharp/bin
+tests/blackbox_csharp/csharp/csharp.sln.DotSettings.user
