csharp interfaces can now return string arrays; proper cleanup of arrays returned from csharp interfaces

--- a/libs/generator/CMakeLists.txt
+++ b/libs/generator/CMakeLists.txt
@@ -42,6 +42,7 @@ set(gen_csharp_plugins
     plugins/csharp/DotNetWrapperPlugin.cpp
     plugins/csharp/DotNetInterfacePlugin.cpp
     plugins/csharp/DotNetInterfaceClassPlugin.cpp
+    plugins/csharp/DotNetDeferredDeleterPlugin.cpp
 )
 
 set(gen_plugins
