jsonDump pt1: dumping enums

--- a/libs/generator/CMakeLists.txt
+++ b/libs/generator/CMakeLists.txt
@@ -19,6 +19,7 @@ set(gen_enum_plugins
 
 set(gen_json_plugins
     plugins/json/JsonParsePlugin.cpp
+    plugins/json/JsonDumpPlugin.cpp
     plugins/json/JsonParseFilesPlugin.cpp
     plugins/json/JsonHelperPlugin.cpp
     plugins/json/JsonConverterPlugin.cpp
