jsonDump pt5: dumping single elem containers

--- a/libs/generator/CMakeLists.txt
+++ b/libs/generator/CMakeLists.txt
@@ -18,6 +18,7 @@ set(gen_enum_plugins
 )
 
 set(gen_json_plugins
+    plugins/json/JsonPluginBase.cpp
     plugins/json/JsonParsePlugin.cpp
     plugins/json/JsonDumpPlugin.cpp
     plugins/json/JsonParseFilesPlugin.cpp
